# tgsflow

./: .gitignore  .goreleaser.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  bootstrap.sh  gemini-apply-pr.md  go.mod  go.sum  togem.md
.github/workflows/: ci.yml  release.yml  tgs-approve.yml  tgs-server-run.yml  tgs-server-scan.yml
adapters/: claude-code.sh
agentops/: AGENTOPS.md
agentops/tgs/: README.md
docs/: server-mode.md
scripts/: bootstrap.sh  install.sh  test-gemini-adapter.sh  test-install.sh
src/: main.go
src/cmd/: agent.go  agent_cmd.go  agent_exec.go  agent_exec_cmd.go  agent_exec_test.go  agent_test.go  approve.go  approve_cmd.go  brief.go  brief_cmd.go  completion.go  context.go  context_cmd.go  context_test.go  help.go  init.go  init_cmd.go  init_test.go  plan.go  plan_cmd.go  plan_test.go  root.go  server.go  server_backlog.go  specify.go  specify_cmd.go  tasks.go  tasks_cmd.go  tasks_test.go  verify.go  verify_cmd.go  verify_ears_test.go
src/core/brain/: brain.go  brain_test.go  transport_shell.go  transport_shell_test.go  transport_stub.go
src/core/config/: factory.go  factory_test.go  loader.go  loader_test.go
src/core/ears/: ears.g4  lint.go  lint_test.go  parser_test.go  regression_test.go
src/core/server/: backlog.go  backlog_test.go  discovery.go  git.go
src/core/thoughts/: files.go  locate.go
src/templates/: render.go  render_test.go  write.go
src/util/logx/: logx.go
templates/: README.md
templates/cli/: Makefile  go.mod
templates/cli/scripts/: build.sh
templates/cli/src/: main.go
templates/go/: Makefile  go.mod
templates/go/pkg/: .gitkeep
templates/python/: pyproject.toml
templates/python/src/my_python_project/: __about__.py  __init__.py  main.py
templates/python/tests/: test_main.py
templates/react/: package.json
templates/react/src/: App.css  App.tsx
tgs/: README.md  tgs.yml
tgs/3829798-fix-ears-regression-tests/: plan.md  research.md
tgs/43ec077-automate-releases-with-goreleaser-and-homebrew/: README.md  implementation.md  plan.md  research.md
tgs/4c34cb8-update-tgs-readme-index/: plan.md  research.md
tgs/5d12c3a-tiny-invisible-tgs-cli-for-huge-teams/: 30_tasks.md  60_doc.md
tgs/612a57f-decorate-existing-software-project-repository/: README.md  research.md
tgs/adapters/: claude-code.sh  gemini-code.sh
tgs/agentops/: AGENTOPS.md
tgs/agentops/prompts/: context_brief.md  context_search.md  impl.md  plan.md  review.md
tgs/agentops/tgs/: implementation.md
tgs/b4552ea-standardize-agentops-intake-to-pr-and-enrich-new-thought/: implementation.md
tgs/b48976e-refactor-cli-to-cobra-viper/: README.md  implementation.md  plan.md  research.md
tgs/design/: 00_context.md  10_needs.md  20_requirements.md  30_architecture.md  40_vnv.md  50_decisions.md  README.md
tgs/f0d3f9a-add-agent-parent-command/: plan.md  research.md
tgs/f71f872-ears-linter-core-and-verify-integration/: README.md  implementation.md  plan.md  research.md
tgs/suggestions/ears_fixtures/: formatting_bullets_and_skip_blocks.md  negative_missing_shall.md  negative_missing_system.md  negative_multiple_when.md  positive_complex.md  positive_state.md
tgs/thoughts/1fd687a-implement-shell-transport-for-brain/: README.md  implementation.md  plan.md  research.md
tgs/thoughts/24c8b79-context-pack-command/: README.md  implementation.md  plan.md  research.md
tgs/thoughts/3829798-fix-ears-regression-tests/: README.md  implementation.md
tgs/thoughts/4b5a2a8-tgs-verify-ears-command/: README.md  aibrief.md  implementation.md  plan.md  (+1 more)
(+55 files in other folders)
